Update ITs so that they work with new auth
